# ToolDev

./: CMakeLists.txt  CMakeSettings.json  License.txt
MinecraftCmd/: CMakeLists.txt  main.cpp
MinecraftForm/: CMakeLists.txt  main.cpp  minecraftform.cpp  minecraftform.h  minecraftform.ui
MinecraftForm/build-MinecraftForm-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
MinecraftLib/: CMakeLists.txt  MinecraftParser.cpp  MinecraftParser.h
